--- a/admin/package.json
+++ b/admin/package.json
@@ -10,20 +10,27 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^2.21.0",
+        "@typescript-eslint/parser": "^2.21.0",
         "axios": "^0.19",
         "babel-plugin-syntax-object-rest-spread": "^6.13.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-simple-import-sort": "^5.0.1",
+        "eslint-plugin-vue": "^6.2.1",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "prettier": "^1.19.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "ts-loader": "^6.2.1",
-        "tslint": "^6.0.0",
         "typescript": "^3.8.2",
         "vue": "^2.5.17",
         "vue-property-decorator": "^8.4.0",
@@ -34,6 +41,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/vue-fontawesome": "^0.1.9",
+        "vee-validate": "^3.2.5",
         "vue-router": "^3.1.5"
     }
 }
