--- a/admin/package.json
+++ b/admin/package.json
@@ -35,7 +35,8 @@
         "vue": "^2.5.17",
         "vue-property-decorator": "^8.4.0",
         "vue-template-compiler": "^2.6.10",
-        "vuex": "^3.1.2"
+        "vuex": "^3.1.2",
+        "vuex-module-decorators": "^0.16.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
