--- a/admin/package.json
+++ b/admin/package.json
@@ -43,6 +43,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/vue-fontawesome": "^0.1.9",
         "vee-validate": "^3.2.5",
-        "vue-router": "^3.1.5"
+        "vue-router": "^3.1.5",
+        "vue-toasted": "^1.1.28"
     }
 }
