--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -10,10 +10,9 @@
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
-    "lib": [ "dom", "es2015" ]
+    "lib": ["dom", "es2015"],
+    "resolveJsonModule": true
   },
-  "include": [
-    "resources/js/**/*"
-   ],
+  "include": ["resources/js/**/*"],
   "exclude": ["node_modules"]
 }
