--- a/admin/package.json
+++ b/admin/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "body-scroll-lock": "^3.0.1",
     "vee-validate": "^3.2.5",
     "vue-router": "^3.1.5",
     "vue-toasted": "^1.1.28"
