【管理画面】共有事項編集ページのガワ作成

--- a/admin/resources/js/data/sidenavConfig.json
+++ b/admin/resources/js/data/sidenavConfig.json
@@ -5,7 +5,7 @@
     "child": false,
     "prefix": "fas",
     "icon": "info-circle",
-    "path": "/information/edit",
+    "path": "/shares/edit",
     "auth": 0
   },
   {
