--- a/admin/package.json
+++ b/admin/package.json
@@ -45,6 +45,7 @@
     "body-scroll-lock": "^3.0.1",
     "vee-validate": "^3.2.5",
     "vue-router": "^3.1.5",
+    "vue-textarea-autosize": "^1.1.1",
     "vue-toasted": "^1.1.28"
   }
 }
