【管理画面】sideNavの現在のページを別色指定

--- a/admin/resources/js/data/sidenavConfig.json
+++ b/admin/resources/js/data/sidenavConfig.json
@@ -5,6 +5,7 @@
     "child": false,
     "prefix": "fas",
     "icon": "info-circle",
+    "name": "shares",
     "path": "/shares/edit",
     "auth": 0
   },
@@ -14,7 +15,8 @@
     "child": false,
     "prefix": "fas",
     "icon": "sticky-note",
-    "path": "releasenote/edit",
+    "name": "releasenote",
+    "path": "/releasenote/edit",
     "auth": 1
   }
 ]
